@@ -1,5 +1,8 @@
 2007-09-22  Badlop  <badlop@ono.com>
 
+	* src/mod_webpresence.erl: Added new ACCESS for automatic enable.
+	* README.txt: Added usage description.
+
 	* TODO.txt: Added feature requests proposed by Pablo Saratxaga.
 
 	* msgs/wa.msg: Added Walloon translation (thanks to Pablo Saratxaga).
